# asl-interpreter

./: CMakeLists.txt  README.md  package.xml
include/asl/: HandTracker.hpp  Preprocessor.hpp  Sensor.hpp  SkeletonTracker.hpp  Viewer.hpp
launch/: asl.launch  skeleton_tracker.launch
scripts/: adaptive_filt.py  asl.ipynb  laplacian_gen.py  sample_viewer.py
scripts/CNN/: CNN_classify.py
scripts/CNN/training/: run.sh
scripts/SVM/: SVM_classify.py
src/: hand_tracker.cpp  main.cpp  skeleton_tracker.cpp  viewer.cpp
src/classes/: HandTracker.cpp  Preprocessor.cpp  Sensor.cpp  SkeletonTracker.cpp  Viewer.cpp
src/sample_generators/: .sample_generator.cpp.swo  sample_generator.cpp  sample_generator_small.cpp
